TDP-685 Fix spacing while drag is enabled

--- a/dataprep-webapp/src/app/components/recipe/_recipe.scss
+++ b/dataprep-webapp/src/app/components/recipe/_recipe.scss
@@ -172,6 +172,7 @@ $recipe-step-draggable-background-color: #808080 !default;
   }
 
   &-placeholder {
+    margin-top: -2px;
     height: 2px !important;
     background-color: $recipe-step-draggable-background-color;
   }
